# jepsen

./: .copier-answers.yml  .gitignore  fast  mypy.ini  pyproject.toml  tasks.py
jepsen_katas/: broadcast.py  echo.py  gossip.py  node.py  unique_ids.py
jespen_katas/: __init__.py  echo.py  test_echo.py
tests/: test_broadcast.py  test_echo.py  test_gossip.py  test_node.py
