[tool.isort]
profile = "black"

[tool.poetry]
name = "jepsen_katas"
version = "0.0.1"
description = "Jepsen distributed katas"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"


[tool.poetry.scripts]
jepsen-echo = "jepsen_katas.echo:main"
jepsen-unique-ids = "jepsen_katas.unique_ids:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
# Task runner
invoke = "^1.5.0"

# Tests
pytest = "^7.2"
pytest-cov = "^4.0"

# Linters
black = "^23.3"
flake8 = "^6.0"
flake8-bugbear = "^23.3"
flake8-comprehensions = "^3.11"
pep8-naming = "^0.13"
isort = "^5.7.0"
mypy = "^1.2"

# Deps scanning
safety = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
